--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Sobre a clinica</h2>
             <p class="escola-texto-um">Centro de estética avançada</p>
             <p class="escola-texto-dois">Contamos com as melhores profissionais da região</p>
         </div>
