--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="biomedica.png" alt="foto da Elo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <h3 class="estudante-nome">Elo</h3>
+            
         </div>
         
         </div>
