--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
          </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem" src="image.png" alt="Logo clinica">
+        <h3 class="rodape">41 99885643</h3>
     </footer>
 </body>
 </html>
