--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="escola-imagem" src="imagemclinica.png" alt="imagem que representa uma clinica">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Nossas consultoras</h2>
+        <h2 class="estudante-titulo">Nossa Biomedica</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
