--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">Centro de estética avançada</p>
             <p class="escola-texto-dois">Contamos com as melhores profissionais da região</p>
         </div>
-        <img class="escola-imagem" src="imagemclinica.png" alt="imagem que representa uma clinica">
+        <img class="escola-imagem" src="imagemnova.png" alt="imagem que representa uma clinica">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Nossa Biomedica</h2>
