--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a clinica</h2>
-            <p class="escola-texto-um">Centro de estética avançada</p>
-            <p class="escola-texto-dois">Contamos com as melhores profissionais da região</p>
+            <p class="escola-texto-um">Centro de Estética Avançada</p>
+            <p class="escola-texto-dois">Contamos com as melhores procedimentos, para voce renovar sua autoestima!</p>
         </div>
         <img class="escola-imagem" src="imagemnova.png" alt="imagem que representa uma clinica">
     </section>
