--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <footer class="rodape">
         <img class="rodape-imagem" src="image.png" alt="Logo clinica">
-        <h3 class="rodape">41 99885643</h3>
+        <h3 class="rodape">Mais info:55876754</h3>
     </footer>
 </body>
 </html>
